DHSCFT-553: Initial Implementation working
